--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
-.wrapper {
-    background-image: url('assets/beach.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+
 
 .card {
     margin: 20px;
@@ -46,14 +42,35 @@
 /* //TODO Make this a sticky footer */
 
 footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
     text-align: center;
     color: gray;
     border-top: 1px solid rgb(224, 190, 158);
+    z-index: 100;
+    background: white;
 }
 
 /* Media Queries */
 @media screen and (max-width: 480px) {
+    wrapper {
+        background-color: gray;
+    }
+
     .card {
         margin: 0 auto;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 481px) {
+    .wrapper {
+        background-image: url('assets/beach.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 30px;
+        height: 1080px;
     }
 }
