--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ footer {
     border-top: 1px solid rgb(224, 190, 158);
     z-index: 100;
     background: white;
-    opacity: 0.5;
+    opacity: 0.8;
 }
 
 /* Media Queries */
@@ -68,6 +68,10 @@ footer {
 
     .card img {
         max-width: 100%;
+    }
+
+    .card-header {
+        text-align: center;
     }
 
     footer {
