--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,19 @@ nav {
     font-size: 1.25rem;
 }
 
-main {
+.index{
     background-image: url('assets/beach.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 30px;
     height: 1080px;
+    margin-bottom: 30px;
+}
+
+.portfolio{
+ background-image: url('assets/beach.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 30px;
 }
 
 .main-container {
@@ -36,8 +43,9 @@ main {
 }
 
 .headshot {
-    max-width: 15rem;
+    max-width: 18rem;
     margin-right: 1rem;
+    margin-bottom: 1rem;
 }
 
 .main-text {
@@ -71,7 +79,14 @@ main {
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+ 
 }
+
+/* Contact form */
+.contact-form {
+    margin: 5%;
+}
+
 
 figure {
     margin-top: 5%;
@@ -114,4 +129,5 @@ footer {
     .main-text {
         font-size: 18px;
     }
+
 }
