--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@ main {
     background-size: cover;
     margin-bottom: 30px;
     background-attachment: fixed;
+    height: 2000px;
 }
 
 .main-container {
     margin-top: 5%;
     margin-bottom: 5%;
-    opacity: 0.85;
     border: solid 1px rgb(224, 190, 158);
     background-color: white;
     min-height: 100%;
