--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,8 @@ main {
 }
 
 .stack-icons img:hover {
-    height: 7rem;
-    transition: height 0.5s;
+    opacity: 0.7;
+    transition: opacity 0.5s;
 }
 
 /* portfolio */
