--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ h1 {
 
 nav {
     background-color: #f9f4f0;
-    opacity: 0.9;
     font-size: 1.25rem;
 }
 
@@ -39,7 +38,7 @@ main {
 .headshot {
     max-width: 25%;
     height: auto;
-    margin-right: 1rem;
+    margin: 1rem;
 }
 
 .main-text {
@@ -47,10 +46,6 @@ main {
 }
 
 /* Social */
-
-.social {
-    margin-top: 1rem;
-}
 
 .social-links li {
     display: inline-block;
@@ -63,7 +58,7 @@ main {
 }
 .social-img {
     max-width: 15rem;
-    margin-right: 1rem;
+    margin: auto 0.5rem;
 }
 
 .social-links a:hover {
